--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -75,7 +75,7 @@ body {
   .section-title {
     width: 100%;
     text-align: center;
-    font-family: "New York";
+    font-family: "SF Pro Display";
     font-size: 4rem;
     color: black;
     margin-bottom: 2rem;
